// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cast casts 1`] = `
"#version 450
//// @link code _01_


    vec2 _01_getValue() { return vec2(1.0, 2.0); }
    
//// @link @cast [getValue vec2] 

vec3 cast() {
  vec3 v = _01_getValue();
  return v.xyx;
}
"
`;

exports[`cast casts and links 1`] = `
"#version 450
//// @link code _01_


    vec2 _01_getValue() { return vec2(1.0, 2.0); }
    
//// @link @cast [getValue vec2] _02_

vec3 _02_cast() {
  vec3 v = _01_getValue();
  return v.xyx;
}

//// @link main 


    vec3 _02_cast();
    void main() { _02_cast(); }
    "
`;

exports[`cast casts compact swizzle 1`] = `
"#version 450
//// @link code _01_


      vec2 _01_getValue() { return vec2(1.0, 2.0); }
    
//// @link @cast [getValue vec2] 

vec4<f32> cast() {
  vec4<f32> v = _01_getValue();
  return vec4<f32>(v.xy, -v.z, v.w) * 2.0;
}
"
`;

exports[`cast casts complex swizzle 1`] = `
"#version 450
//// @link code _01_


      vec2 _01_getValue() { return vec2(1.0, 2.0); }
    
//// @link @cast [getValue vec2] 

vec4<f32> cast() {
  vec4<f32> v = _01_getValue();
  return vec4<f32>(-v.x, v.y, -1.0, 0.0) * 2.0;
}
"
`;

exports[`cast swizzles 1`] = `
"#version 450
//// @link @swizzle 

vec3 swizzle(vec3 a) {
  return a.xyx;
}
"
`;
